remove streams from DefaultConstraintValidatorContext.findGroups